<resources>
    <string name="app_name">Calculator</string>
    
    //menu strings
    <string name="calculator">Calculator</string>
    <string name="simpleCalculator">Simple</string>
    <string name="advancedCalculator">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    
    //about strings
    <string name="poweredBy">Powered by:</string>
    <string name="author">Krystian Bendinger</string>
    <string name="version">Version:</string>
    <string name="versionNO">0.1</string>
    <string name="abouts">Simple Calculator Application \nUser might use simple or advanced mode \nAll screen orientation allowed\nENJOY!</string>

    //simple strings
    <string name="backspace">BKSP</string>
    <string name="cancel">C</string>
    <string name="plus_minus">+/-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="dot">.</string>
    <string name="textview"> </string>

    //addiction for advanced string
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="root">x^2</string>
    <string name="root2">x^y</string>
    <string name="log">log</string>


</resources>
