<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".AdvancedCalculator">

    <Button
        android:id="@+id/nineButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/nine"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/eightButton" />

    <Button
        android:id="@+id/root2Button"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/root2"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/rootButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="20dp"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/oneButton" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/equal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twoButton" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/two"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/dotButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/three"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintStart_toEndOf="@+id/twoButton" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sub"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/threeButton" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/seven"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sqrt"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sinButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sin"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sqrtButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backspaceButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/backspace"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sinButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="190sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/cosButton"
        app:layout_constraintStart_toEndOf="@+id/backspaceButton" />

    <Button
        android:id="@+id/plus_minButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/plus_minus"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lnButton"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cosButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cos"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/rootButton"
        app:layout_constraintStart_toEndOf="@+id/sinButton" />

    <Button
        android:id="@+id/tanButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tan"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/root2Button"
        app:layout_constraintStart_toEndOf="@+id/cosButton" />

    <Button
        android:id="@+id/lnButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ln"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/logButton"
        app:layout_constraintStart_toEndOf="@+id/tanButton" />

    <Button
        android:id="@+id/rootButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/root"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintStart_toEndOf="@+id/sqrtButton" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/log"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/divideButton"
        app:layout_constraintStart_toEndOf="@+id/root2Button" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/eight"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/divide"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintStart_toEndOf="@+id/nineButton" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/five"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/six"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/multiply"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/subButton"
        app:layout_constraintStart_toEndOf="@+id/sixButton" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/equalsButton" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="90sp"
        android:layout_height="60sp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/four"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>